<resources>
    <string name="app_name">Audio Book</string>
    <string name="button">button</string>
    <string name="or">--------- or ---------</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_home">Home Page</string>
    <string name="title_search">Search</string>
    <string name="title_music">Music</string>
    <string name="favorite">Thêm vào danh sách yêu thích</string>
    <string name="typeBut1">Tình Yêu</string>
    <string name="typeBut2">Kinh Doanh</string>
    <string name="typeBut3">Chiến Tranh</string>
    <string name="typeBut4">Cuộc Sống</string>
    <string name="profileList">Danh Sách Phát</string>
    <string name="More">Thể loại khác </string>
    <string name="Save">Lưu</string>
    <string name="Share">Chia sẻ</string>
    <string name="Download">Tải về</string>
    <string name="History">Lịch sử nghe</string>
    <string name="waitList">Thêm vào danh sách phát</string>
    <string name="delWaitList">Xoá Khỏi danh sách phát</string>
    <string name="ten">Tên</string>
    <string name="tuoi">Tuổi</string>
    <string name="soDT">Số điện thoại</string>
    <string name="tvFavor">Danh sách yêu thích</string>
    <string name="delFavor">Xoá khỏi danh sách yêu thích</string>
    <string name="title_profile">Profile</string>
    <string name="all">Tất cả</string>
    <string name="editProfile2">Chỉnh sửa hồ sơ</string>
    <string name="editProfile">Chỉnh sửa</string>
    <string name="finding">Tìm kiếm AudioBook, thể loại,</string>
    <string name="finding2"> người đọc sách, và nhiều nội dung khác</string>
    <string name="fingding3">Nghe cuốn sách bạn thích</string>
    <string name="Popcasts">Popcasts</string>
    <string name="AudioBook">AudioBook</string>
    <string name="BestChoice">Lựa chọn của BMO</string>
    <string name="Recently">Mới được thêm vào</string>
    <string name="ForYou">Tập dành cho bạn</string>
    <string name="Top">Tuyển tập hàng đầu</string>
    <string name="Author">Tác giả được yêu thích nhất</string>
    <string name="AllType">#Tất cả thể loại</string>
    <string name="HotType">#Các Playlist thịnh hành</string>
    <string name="SearchHint">Nhập nội dung bạn cần tìm</string>
    <string name="Love">Tình Yêu</string>
    <string name="authorDetail">Author</string>
    <string name="searching">Bạn muốn nghe gì?</string>
    <string name="ManyAuthor">Quangcutezz,LongBaybi,VuaDaDinh,PhucNgoz</string>
    <string name="book1">Cuộc sống muôn màu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Detail_Fragment">Detail Page</string>
    <string name="Detail1">Định mệnh</string>
    <string name="Follow">Theo dõi</string>
    <string name="Phobien">Phổ Biến</string>
    <string name="Cothethich">Có thể bạn cũng thích</string>
    <string name="Cacbanphathanhmoi">Các bản phát hành mới</string>
    <string name="title_Detail">Detail page</string>
    <string name="IntroDetail1">Tình chỉ đẹp khi tình còn dang dở, hoa chỉ đẹp khi hoa nở chóng tàn</string>
</resources>